Fix background not covering full screen

--- a/assests/css/rpsgame.css
+++ b/assests/css/rpsgame.css
@@ -50,6 +50,7 @@ main {
     top: 11.5em;
     left: 0;
     width: 99vw;
+    height: 82vh;
 }
 
 .darkMode {
